src/common.blocks/scenario.scss
.main {
  padding: 60px 0 120px 0;
}

@keyframes showEffect {
  0% { box-shadow: 0px 4px 12px rgba(30, 30, 30, 0.1);}
  50% { box-shadow: 0 4px 18px #2bb673;}
  100% { box-shadow: 0px 4px 12px rgba(30, 30, 30, 0.1);}
}

.scenario {
  width: 700px;
  height: auto;
  border-radius: 5px;
  padding: 21px;

  &_effect {
    -webkit-animation: showEffect 4s;
    animation: showEffect 4s;
  }

  &__header-preview {
    font-family: 'Raleway', 'Montserrat', 'Roboto', sans-serif;
    font-size: 1.7em;
    color: #444;
    word-spacing: 0px;
  }

  &__description {
    font-family: 'Roboto', sans-serif;
    font-size: 1em;
    color: #444;
    word-break: break-all;
  }

  &__input {
    border-bottom: 1px solid rgba(150, 150, 150, 0.3);
    font-family: 'Roboto', sans-serif;
    font-size: 0.9em;
    border-radius: 2px;
    padding-left: 0;
    padding-bottom: 8px;
    width: 100%;
    color: #444;
  }

  &__header {
    font-family: 'Raleway', 'Montserrat', 'Roboto', sans-serif;
    font-size: 1.7em;
    color: #444;
    word-spacing: 0px;
    padding:13px;
    padding-left: 0;
    width: 100%;
    border:none;
  }

  &__header::placeholder {
    color: #aaaaaa;
  }

  &__input::placeholder {
    color: #aaaaaa;
  }

  &-image {
    width: 100%;
    text-align: left;
    position: relative;

    &__wraper {
      position: relative;
      max-width: 100%;
      display: inline-flex;

      > img {
        max-width: 100%;
        display: block;
      }
    }
  }

  &__result {
    font-family: 'Roboto', sans-serif;
    font-size: 0.95em;
    color: #7b7a7a;
    font-weight: bold;
  }
}

::v-deep {
  .scenario__description p {
    margin: 0
  }
  .scenario__description p:empty::after {
    content: "\00A0";
  }

  .scenario__description li {
    display: flex;
    align-items: flex-start;
  }
}

.scenario-image__wraper:hover .image-menu{
  display: inline-block;
}

.scenario-image__wraper:focus .image-resizer{
  display: block;
}

.scenario-success {

  &__message {
    font-family: 'Montserrat', sans-serif;
    font-size: 1.25em;
    color: #444;
    margin: 0;
    -webkit-animation: fadeOut 1s;
    animation: fadeOut 1s;
    animation-fill-mode: forwards;
    > svg {
      margin-right: 13px;
    }
  }
}

.scenario-share {
  display: inline-flex;
  align-items: center;
  font-family: 'Roboto', sans-serif;
  font-size: 0.95em;
  color: #656565;
  padding: 13px;
  border: 2px solid #656565;

  a:not(:last-child) {
    margin-right: 8px;
  }

  &__text {
    font-size: 1em;
    margin-right: 21px;
    font-weight: bold;
    font-family: 'Roboto', sans-serif;
  }
}

//Media styles

@media (max-width: 750px) {
  .main {
    padding-top: 34px;
  }
  .scenario {
    width: 550px;
  }
}

@media (max-width: 550px) {
  .main-wraper {
    width: 100%!important;
    text-align: center;
  }

  .main {
    padding-top: 16px;
    width: 95%!important;
  }

  .scenario {
    width: 100%;
    padding: 13px;
  }
}

@media (max-width: 495px) {
  .scenario__header-preview {
    font-size: 1.4em;
  }
}

@media (max-width: 450px) {
  .scenario__header {
    font-size: 1.3em;
  }
}

@media (max-width: 380px) {
  .drag-and-drop-slot::v-deep > p {
    font-size: 1em!important;
  }
}

